--- a/pom.xml
+++ b/pom.xml
@@ -21,15 +21,25 @@
 
 	<dependencies>
 
-    
-        <dependency>
-            <groupId>org.keycloak.bom</groupId>
-            <artifactId>keycloak-adapter-bom</artifactId>
-            <version>3.3.0.Final</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-    
+
+		<dependency>
+			<groupId>org.keycloak.bom</groupId>
+			<artifactId>keycloak-adapter-bom</artifactId>
+			<version>3.3.0.Final</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-adapter</artifactId>
+			<version>3.3.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-starter</artifactId>
+			<version>3.3.0.Final</version>
+		</dependency>
 
 
 		<dependency>
