--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 
 # Connection url for the database "netgloo_blog"
 spring.datasource.url = jdbc:mysql://localhost:3306/aviato?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-
+server.port=7070
 spring.datasource.username = root
 spring.datasource.password = thomas
 
