--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,9 +38,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
 
-keycloak.auth-server-url=http://localhost:8082/auth
+keycloak.auth-server-url=http://localhost:8082/products
 keycloak.realm=SpringBootKeycloak
+keycloak.realm=products-app
 keycloak.resource=login-app
 keycloak.public-client=true
-keycloak.security-constraints[0].authRoles[0]=user
+keycloak.security-constraints[0].authRoles[0]=admin
 keycloak.security-constraints[0].securityCollections[0].patterns[0]=/products/*
