--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,9 @@
 			<version>3.3.0.Final</version>
 		</dependency>
 <dependency>
-            <groupId>org.keycloak.bom</groupId>
-            <artifactId>keycloak-adapter-bom</artifactId>
-            <version>3.3.0.Final</version>
-            <type>pom</type>
-            <scope>import</scope>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-spring-boot-2-starter</artifactId>
+            <version>4.0.0.Final</version>
         </dependency>
 		<dependency>
 			<groupId>org.keycloak</groupId>
